--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.18.4",
     "fastapi[standard]>=0.134.0",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.13.1",
     "sqlalchemy[asyncio]>=2.0.47",
     "uvicorn>=0.41.0",
 ]
