--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ select = [
     "B", # flake8-bugbear
     "C4", # flake8-comprehensions
     "UP", # pyupgrade
+    "RUF022",
 ]
 ignore = [
     "E501", # line too long, handled by ruff
