--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.18.4
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
+asyncpg==0.31.0
 certifi==2026.2.25
 click==8.3.1
 colorama==0.4.6 ; sys_platform == 'win32'
