--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "mypy>=1.19.1",
     "pre-commit>=4.5.1",
     "ruff>=0.15.4",
 ]
@@ -43,6 +44,11 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "./migrations/versions/*.py" = ["W291"]
+
+[tool.mypy]
+plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
+strict = true
+ignore_missing_imports = true
 
 [tool.alembic]
 
