--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -23,11 +23,15 @@ httpx==0.28.1
 identify==2.6.16
 idna==3.11
 jinja2==3.1.6
+librt==0.8.1 ; platform_python_implementation != 'PyPy'
 mako==1.3.10
 markdown-it-py==4.0.0
 markupsafe==3.0.3
 mdurl==0.1.2
+mypy==1.19.1
+mypy-extensions==1.1.0
 nodeenv==1.10.0
+pathspec==1.0.4
 platformdirs==4.9.2
 pre-commit==4.5.1
 pydantic==2.12.5
